# vasp-cache

./: .gitignore  AGENTS.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
docs/: CUTOVER.md  DESIGN-storage-v2.md  IDENTITY.md  INCAR_HARD_AUDIT.md  INTEGRATION.md  USER.md
issues/: 0001-crystallographic-standardization.md  0002-poscar-vs-contcar-identity.md  0003-potcar-fingerprint-strength.md  0004-incar-hard-key-audit.md  0005-geom-hash-precision-config.md  0006-push-and-install-standardization.md  0007-sop-full-regression.md  0008-legacy-jsonstore-cleanup.md  0009-incremental-ingest-ops.md  0010-concurrent-put-safety.md  0011-soft-similarity-search.md  0012-optional-large-blobs.md  0013-ci-real-data-optional.md  0014-batch-cache-put-performance.md  0015-policy-doc-identity-contract.md  0016-archive-export-import.md  0017-meta-dump-jsonl.md  0018-ie-migrate-e2e-tests.md  0019-jsonstore-no-auto-migrate-doc.md  0020-put-conflict-policy.md  0021-sampled-single-point-policy.md  0022-cache-data-quality-audit.md  0023-schema-migration-v0.3.0.md  0024-equivalent-structures-different-keys.md  README.md  current-gaps.md
scripts/: audit_cache.py  audit_manifests.py  browser_smoke.py  migrate_signac_to_cas.py  normalize_c606.sh  rehash_meta_cas.py  reingest_tree.py  verify_real_calcs.py
tests/: conftest.py  test_archive.py  test_audit.py  test_cas.py  test_cli.py  test_conflict.py  test_consumers.py  test_fingerprint.py  test_fresh_cli.py  test_fresh_index.py  test_health.py  test_identity.py  test_inspection.py  test_logutil.py  test_manifest_audit.py  test_mapping.py  (+9 more)
(+53 files in other folders)
