[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-cache"
version = "0.1.0"
description = "Black-box VASP calculation cache (signac backend)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "signac>=2.0,<3",
    "pyyaml>=6.0",
    "emmet-core>=0.60",
    "pymatgen>=2023.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vasp-cache = "vasp_cache.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_data: tests that read real VASP calculation directories (may need NFS)",
]

[tool.setuptools.package-data]
vasp_cache = ["data/*.yaml"]
