[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-cache"
version = "0.3.0"
description = "Lightweight SQLite index for VASP calculations keyed by formula and INCAR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pymatgen>=2023.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vasp-cache = "vasp_cache.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_data: tests that read real VASP calculation directories (may need NFS)",
]

